--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<center><img src="https://your-mom-is-so-fat-we-couldnt-fit-her-in-this-doma.in/pwqihvhl.png"></img>
+<center><img src="searchicon.png"></img>
 <p>Data here can take <b>24 hours</b> to propogate, submissions are manually reviewed and added. High-Profile bans are not displayed.</p></center>
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Input FiveM License, Incident ID, Type, or other searchable data." title="Type in a name">
