--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 }
 
 #myInput {
-  background-image: url('i/searchicon.png');
+  background-image: url('searchicon.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 100%;
