--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 <body>
 
 <center><img src="https://your-mom-is-so-fat-we-couldnt-fit-her-in-this-doma.in/pwqihvhl.png"></img>
-<p>Data here can take <b>24 hours</b> to propogate, submissions are manually reviewed and added. High-Profile bans are not displayed.</p></center>
-
+<p>Each submission is manually reviewed by ESRP FivePD Staff. Bans and Conduct information is <b>public knowledge</b>.</p></center>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Input FiveM License, Incident ID, Type, or other searchable data." title="Type in a name">
 
 <table id="myTable">
