--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <body>
 
 <center><img src="https://your-mom-is-so-fat-we-couldnt-fit-her-in-this-doma.in/pwqihvhl.png"></img>
-<p>Each submission is manually reviewed by ESRP FivePD Staff. Bans and Conduct information is <b>public knowledge</b>.</p></center>
+<p>Each submission is manually reviewed by ESRP FivePD Staff. Please use the Forum to appeal or report a discrepancy.</p>
+</center>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Input FiveM License, Incident ID, Type, or other searchable data." title="Type in a name">
 
 <table id="myTable">
