--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <center><img src="https://your-mom-is-so-fat-we-couldnt-fit-her-in-this-doma.in/pwqihvhl.png"></img>
 <p>Each submission is manually reviewed by ESRP FivePD Staff. Please use the Forum to appeal or report a discrepancy.</p>
 </center>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Input FiveM License, Incident ID, Type, or other searchable data." title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Insert FiveM Nickname. This IS NOT your in-character name." title="Type in a name">
 
 <table id="myTable">
   <tr class="header">
