--- a/index.html
+++ b/index.html
@@ -56,47 +56,13 @@
     <th style="width:17%;">Incident ID</th>
   </tr>
   <tr>
-    <td><p>Sample1</p></td>
-    <td><p>Warning</p></td>
-    <td><p>Valid<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>VFCV-FASX<p></td>
+    <td><p>No Active Bans</p></td>
+    <td><p></p></td>
+    <td><p><p></td>
+    <td><p><p></td>
+    <td><p><p></td>
   </tr>
-  <tr>
-    <td><p>Sample2</p></td>
-    <td><p>Ban</p></td>
-    <td><p>Active | 05/25/2023<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>XXXX-ZEBRA<p></td>
-  </tr>
-   <tr>
-    <td><p>Sample3</p></td>
-    <td><p>Ban</p></td>
-    <td><p>Active | 05/25/2023<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>X24X-ZEBRA<p></td>
-  </tr>
-   <tr>
-    <td><p>Sample4</p></td>
-    <td><p>Ban</p></td>
-    <td><p>Active | 05/25/2023<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>XXXX-ZEBRA<p></td>
-  </tr>
- <tr>
-    <td><p>Sample5</p></td>
-    <td><p>Warning</p></td>
-    <td><p>Active | 05/25/2023<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>XXXX-ZEBRA<p></td>
-  </tr>
-   <tr>
-    <td><p>Sample6</p></td>
-    <td><p>Ban</p></td>
-    <td><p>Active | 05/25/2023<p></td>
-    <td><p>fivem:10082888<p></td>
-    <td><p>XXXX-ZEBRA<p></td>
-  </tr>
+
   </tr>
 </table>
 
