--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <th style="width:32%;">Players Name</th>
     <th style="width:17%;">Type</th>
     <th style="width:17%;">Status | END</th>
-    <th style="width:17%;">FiveM License</th>
+    <th style="width:17%;">License</th>
     <th style="width:17%;">Incident ID</th>
   </tr>
   <tr>
