--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 <table id="myTable">
   <tr class="header">
-    <th style="width:32%;">Players Name</th>
+    <th style="width:32%;">Last Known Name</th>
     <th style="width:17%;">Type</th>
-    <th style="width:17%;">Status | END</th>
+    <th style="width:17%;">Status | Duration</th>
     <th style="width:17%;">License</th>
     <th style="width:17%;">Incident ID</th>
   </tr>
