--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -67,6 +67,14 @@ table tr:hover {
   bottom: 0;
   width: 100%;
 }
+
+.disclaimer {
+  background-color: #f44336;
+  color: #fff;
+  padding: 10px;
+  margin-top: 20px;
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -98,10 +106,14 @@ table tr:hover {
       </tr>
     </tbody>
   </table>
+
+  <div class="disclaimer">
+    <p>This website is for informational purposes only. All submissions are subject to manual review by ESRP FivePD Staff. Any discrepancies should be reported through the appropriate channels.</p>
+  </div>
 </div>
 
 <div class="footer">
-  <p>© 2024 ESRP FivePD. All Rights Reserved. <br><i>All bans are manually reviewed by ESRP's Board of Directors, please contact a member of staff if you notice any issues</i> </i></p>
+  <p>© 2024 ESRP FivePD. All Rights Reserved.</p>
 </div>
 
 <script>
@@ -127,3 +139,4 @@ function myFunction() {
 
 </body>
 </html>
+```
