--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ table tr:hover {
     </thead>
     <tbody>
       <tr>
-        <td>No Active Bans</td>
+        <td>No Logged Bans or Warnings.</td>
         <td></td>
         <td></td>
         <td></td>
