--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <tbody>
       <tr>
         <td>John Doe</td>
-        <td>No</td>
+        <td>Ban</td>
         <td>30 days</td>
         <td>115e54f4615a4febbda28eee4fb87c95d73d224e</td>
         <td>XAM-123</td>
