Add reviewer for transparency.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
     color: #999;
     text-align: center;
   }
+
+  .reviewer {
+    font-weight: bold;
+  }
 </style>
 </head>
 <body>
@@ -106,6 +110,7 @@
         <th>Duration</th>
         <th>License</th>
         <th>Incident ID</th>
+        <th>Reviewer</th> <!-- New column -->
       </tr>
     </thead>
     <tbody>
@@ -115,6 +120,7 @@
         <td>30 days</td>
         <td>115e54f4615a4febbda28eee4fb87c95d73d224e</td>
         <td>XAM-123</td>
+        <td class="reviewer">Axe</td> <!-- New cell -->
       </tr>
       <tr>
         <td>Jane Smith</td>
@@ -122,6 +128,7 @@
         <td>N/A</td>
         <td>115e54f4615a4febbda28eee4fb87c95d73d224e</td>
         <td>XAM-125</td>
+        <td class="reviewer">Mike</td> <!-- New cell -->
       </tr>
       <!-- Add more rows as needed -->
     </tbody>
