--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f3f3f3;
+    background-color: #151618; /* Dark grey background */
     margin: 0;
     padding: 0;
+    color: #fff; /* White text */
   }
 
   .header {
-    background-color: #6c757d; /* Modern gray */
+    background-color: #151618; /* Dark grey background */
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -64,11 +65,11 @@
     border-bottom: 1px solid #ccc;
     text-align: left;
     font-size: 14px;
+    background-color: #151618; /* Dark grey background */
+    color: #fff; /* White text */
   }
 
   table th {
-    background-color: #6c757d; /* Modern gray */
-    color: #fff;
     font-weight: bold;
   }
 
