Changes.... again. (style)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #151618; /* Dark grey background */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -74,11 +74,11 @@
   }
 
   table tr:nth-child(even) {
-    background-color: #f9f9f9;
+    background-color: #1d1e20; /* Slightly lighter grey */
   }
 
   table tr:hover {
-    background-color: #f2f2f2;
+    background-color: #2a2b2d; /* Slightly lighter grey on hover */
   }
 
   .disclaimer {
